# madara-bench

./: .gitignore  .gitmodules  Makefile  pyproject.toml
app/: __init__.py  error.py  main.py  models.py  rpc.py  stats.py
app/benchmarks/: __init__.py  generators.py
app/models/: body.py  models.py  query.py
madara/: compose.yaml  default.nix  flake.nix
