[tool.poetry]
name = "madara-bench"
version = "0.1.0"
description = "Starknet node benchmarking utility"
authors = ["Trantorian"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.114.0"}
docker = "^7.1.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
